# chat-plays-chess

./: .gitignore  ATTRIBUTION.md  Cargo.toml  README.md
examples/: window.rs
scripts/: common.sh  run.sh  stream.sh  test.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/engine/: action.rs  events.rs  mod.rs  moves.rs  users.rs
src/engine/events/: external.rs  internal.rs  mod.rs  stream.rs
src/engine/votes/: game.rs  mod.rs  settings.rs
src/lichess/: action.rs  challenge.rs  events.rs  game.rs  manager.rs  mod.rs
src/stream/: audio.rs  draw.rs  font.rs  frame.rs  image.rs  manager.rs  mod.rs  model.rs  window.rs
src/twitch/: command.rs  events.rs  mod.rs
